# c-basic

./: .gitignore  CMakeLists.txt  main.c  support.c
src/: a.out  array.c  bit-fields.c  c_basic  cast.c  com_yytec_javamain_HelloNativeTest.h  com_yytec_javamain_MyThreadTest.h  day-enum.c  error.c  file.c  get_word.c  header.h  hello_world_impl.cpp  io.c  libhello.jnilib  libtest_thread.jnilib  main.c  pizza.c  point.c  praisel.c  pre.c  printout.c  quick-sort.c  str.c  struct.c  support.c  test_thread.c  type-def.c  unions.c  vmtest.c
src/head/: ch.h  get_word.h  word_manage.h  word_manage_p.h
src/jni/: com_yytec_javamain_jni_MaxValTest.h  libjni_max_val.jnilib  max_val.c
src/point/: alignment.c  array.c  auto.c  byteorder.c  declaration.c  free.c  get_word.c  output_argument.c  pointer.c  pointer_calc.c  print_address.c  printer_address.c  stackoverflow.c  variable_array.c
